--- a/css/stylesLess.less
+++ b/css/stylesLess.less
@@ -157,12 +157,6 @@ main {
   }
 }
 
-@media only screen and (max-width: 400px) {
-  body {
-    font-size: 80%;
-  }
-}
-
 
 /* -----------------------------------*/
 /* ---------->>> NAV <<<-----------*/
@@ -434,6 +428,8 @@ main {
 @media only screen and (min-width: 900px) {
   .grid-container img {
     width: 49.7%;
+    vertical-align: top;
+    margin-top: 5px;
   }
 
   .grid {
